# ots_hw_11_server_sqlLite

./: CMakeLists.txt
.github/workflows/: release.yml
client/: CMakeLists.txt  main.cpp
lib/version_lib/: CMakeLists.txt  version.cpp  version_define.h.in
src/: CMakeLists.txt  main.cpp  request_handler.cpp  request_handler.h  server.h
